src/snapshots/alma__infer__tests__infer-37.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Math num =\n    { add : num -> num -> num\n    , sub : num -> num -> num\n    }\n\ntype M num = M (Math num)\n\nmain = M { add: \\\\x y -> x + y, sub: \\\\x y -> x - y }\n\")"

---
Input:

module Test exposing (main)

type Math num =
    { add : num -> num -> num
    , sub : num -> num -> num
    }

type M num = M (Math num)

main = M { add: \x y -> x + y, sub: \x y -> x - y }


---
Output:

module Test

main : ∀ ∅ . M Float
