src/snapshots/alma__infer__tests__infer-39.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : a -> a\nmain a = a\n\")"

---
Input:

module Test exposing (main)

main : a -> a
main a = a


---
Output:

module Test

main : ∀ a . a -> a
