src/snapshots/alma__infer__tests__infer-4.snap
---
source: src/infer.rs
expression: "infer(\"\nmodule Test exposing (c)\n\na = 1\n\nb = 2\n           \")"

---
Input:


module Test exposing (c)

a = 1

b = 2
           

---
Output:

[2:22]

Undefined identifier `c`

  1│  
  2│  module Test exposing (c)
   │                        ↑
  3│  
  4│  a = 1
