src/snapshots/alma__infer__tests__infer-40.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : Float\nmain = 5\n\")"

---
Input:

module Test exposing (main)

main : Float
main = 5


---
Output:

module Test

main : Float
