src/snapshots/alma__infer__tests__infer-42.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nmain : a\nmain = 5\n\")"

---
Input:

module Test exposing (main)

main : a
main = 5


---
Output:

[3:0]

The type signature is more general than the inferred type:

  1│  module Test exposing (main)
  2│  
  3│  main : a
   │  ↑↑↑↑
  4│  main = 5

The type signature says the type is

a

which it is more general than

Float
