src/snapshots/alma__infer__tests__infer-43.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype List a = List a\n\nmain : Float -> List Float\nmain a = List a\n\")"

---
Input:

module Test exposing (main)

type List a = List a

main : Float -> List Float
main a = List a


---
Output:

module Test

main : ∀ ∅ . Float -> List Float
